--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
         rel="stylesheet">
     <style>
         :root {
-            --bg-body: #050505;
-            --bg-card: #0c0c0c;
-            --bg-nav: #000000;
-            --text-main: #ffffff;
-            --text-dim: #888888;
-            --accent: #5d5dff;
-            --accent-soft: rgba(93, 93, 255, 0.1);
-            --border: #1a1a1a;
+            --bg-body: #e2e8f0;
+            --bg-card: #ffffff;
+            --bg-nav: #f1f5f9;
+            --text-main: #1e293b;
+            --text-dim: #64748b;
+            --accent-rgb: 71, 85, 105;
+            --accent: #475569;
+            --accent-soft: rgba(71, 85, 105, 0.1);
+            --border: #cbd5e1;
             --premium: #a855f7;
             --grupal: #0ea5e9;
             --individual: #10b981;
@@ -27,6 +28,99 @@
             --bonus: #f59e0b;
             --replacement: #f97316;
             --transition: all 0.3s cubic-bezier(0.2, 1, 0.3, 1);
+        }
+
+        /* Skins Definitions (Full Atmosphere Overrides) */
+        body.theme-emerald {
+            --bg-body: #0f1f1a;
+            --bg-card: #1a2f28;
+            --bg-nav: #0a1411;
+            --text-main: #ffffff;
+            --text-dim: #888888;
+            --border: #254038;
+            --accent-rgb: 16, 185, 129;
+            --accent: #10b981;
+            --accent-soft: rgba(16, 185, 129, 0.1);
+        }
+
+        body.theme-amethyst {
+            --bg-body: #16141f;
+            --bg-card: #242133;
+            --bg-nav: #0e0d14;
+            --text-main: #ffffff;
+            --text-dim: #888888;
+            --border: #35304d;
+            --accent-rgb: 168, 85, 247;
+            --accent: #a855f7;
+            --accent-soft: rgba(168, 85, 247, 0.1);
+        }
+
+        body.theme-gold {
+            --bg-body: #1f1b16;
+            --bg-card: #2e2922;
+            --bg-nav: #14110e;
+            --text-main: #ffffff;
+            --text-dim: #888888;
+            --border: #4a4136;
+            --accent-rgb: 251, 191, 36;
+            --accent: #fbbf24;
+            --accent-soft: rgba(251, 191, 36, 0.1);
+        }
+
+        body.theme-midnight {
+            --bg-body: #000000;
+            --bg-card: #080808;
+            --bg-nav: #000000;
+            --text-main: #ffffff;
+            --text-dim: #94a3b8;
+            --border: #1a1a1a;
+            --accent-rgb: 0, 242, 255;
+            --accent: #00f2ff;
+            --accent-soft: rgba(0, 242, 255, 0.1);
+        }
+
+        body.theme-midnight .group-card {
+            border-color: #111;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+        }
+
+        body.theme-midnight .card-title {
+            color: #fff;
+            font-weight: 700;
+        }
+
+        body.theme-midnight .info-val {
+            color: #00f2ff;
+            text-shadow: 0 0 10px rgba(0, 242, 255, 0.3);
+        }
+
+        body.theme-midnight .stat-val {
+            color: #fff;
+            text-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+        }
+
+        body.theme-midnight .day-header {
+            color: #fff;
+            border-bottom: 2px solid #1a1a1a;
+            padding-bottom: 8px;
+        }
+
+        body.theme-midnight .drawer {
+            background: #050505;
+            border-left: 1px solid #111;
+        }
+
+        body.theme-midnight .log-entry {
+            border-bottom: 1px solid #111;
+        }
+
+        body.theme-midnight .log-price {
+            color: #00f2ff;
+            font-weight: 700;
+        }
+
+        body.theme-midnight .brand-icon {
+            box-shadow: 0 0 15px rgba(0, 242, 255, 0.4);
         }
 
         * {
@@ -108,7 +202,7 @@
         .nav-link.active {
             color: white;
             background: var(--accent-soft);
-            border: 1px solid rgba(93, 93, 255, 0.2);
+            border: 1px solid rgba(var(--accent-rgb), 0.2);
         }
 
         .nav-link.bonus {
@@ -155,7 +249,7 @@
             border: 1px solid var(--border);
             border-radius: 12px;
             padding: 0.75rem 1rem;
-            color: white;
+            color: var(--text-main);
             font-size: 0.85rem;
             outline: none;
             transition: var(--transition);
@@ -163,7 +257,7 @@
 
         .search-bar input:focus {
             border-color: var(--accent);
-            box-shadow: 0 0 0 4px rgba(93, 93, 255, 0.05);
+            box-shadow: 0 0 0 4px rgba(var(--accent-rgb), 0.05);
         }
 
         /* Group Card Grid */
@@ -243,7 +337,7 @@
             font-size: 0.95rem;
             font-weight: 600;
             line-height: 1.4;
-            color: #eee;
+            color: var(--text-main);
             margin-bottom: auto;
             word-break: break-all;
         }
@@ -530,24 +624,35 @@
 
         .day-header {
             grid-column: 1 / -1;
-            font-size: 0.75rem;
-            font-weight: 800;
+            font-family: 'Outfit', sans-serif;
+            font-size: 0.85rem;
+            font-weight: 700;
             text-transform: uppercase;
-            color: var(--accent);
-            letter-spacing: 2px;
-            padding: 2rem 0 1rem;
+            color: var(--text-main);
+            letter-spacing: 0.15rem;
+            padding: 3rem 0 1rem;
             display: flex;
             align-items: center;
-            gap: 1rem;
-            border-bottom: 1px solid #111;
-            margin-bottom: 0.5rem;
+            gap: 12px;
+            margin-bottom: 1rem;
+            position: relative;
+        }
+
+        .day-header::before {
+            content: '';
+            width: 8px;
+            height: 8px;
+            background: var(--accent);
+            border-radius: 50%;
+            display: inline-block;
+            box-shadow: 0 0 10px var(--accent-soft);
         }
 
         .day-header::after {
             content: '';
             flex-grow: 1;
             height: 1px;
-            background: #0a0a0a;
+            background: linear-gradient(90deg, var(--border), transparent);
         }
 
         .card-grid.view-list {
@@ -664,6 +769,64 @@
             background: var(--accent);
             color: white;
         }
+
+        /* Skin Switcher UI */
+        .skin-section {
+            margin-top: auto;
+            padding-top: 2rem;
+            border-top: 1px solid #111;
+        }
+
+        .theme-switcher {
+            display: flex;
+            gap: 12px;
+            padding: 8px 12px;
+            background: #080808;
+            border-radius: 12px;
+            border: 1px solid #111;
+            width: fit-content;
+        }
+
+        .theme-opt {
+            width: 18px;
+            height: 18px;
+            border-radius: 4px;
+            cursor: pointer;
+            border: 2px solid transparent;
+            transition: var(--transition);
+            position: relative;
+        }
+
+        .theme-opt:hover {
+            transform: translateY(-2px);
+        }
+
+        .theme-opt.active {
+            border-color: #fff;
+            transform: scale(1.1);
+        }
+
+        .opt-titanium {
+            background: #cbd5e1;
+        }
+
+        .opt-emerald {
+            background: #10b981;
+        }
+
+        .opt-amethyst {
+            background: #a855f7;
+        }
+
+        .opt-gold {
+            background: #fbbf24;
+        }
+
+        .opt-midnight {
+            background: #000000;
+            border: 1px solid #333 !important;
+            box-shadow: inset 0 0 5px rgba(0, 242, 255, 0.5);
+        }
     </style>
 </head>
 
@@ -683,6 +846,18 @@
         <div class="nav-link" data-filter="extra">Recursos Extra</div>
 
         <div class="nav-link bonus" data-filter="bonus">🎁 Bono Retención</div>
+
+        <div class="skin-section">
+            <p class="nav-section-label">Studio Skins</p>
+            <div class="theme-switcher">
+                <div class="theme-opt active opt-titanium" data-theme="default" title="Titanium Silver"></div>
+                <div class="theme-opt opt-emerald" data-theme="theme-emerald" title="Emerald Luxe"></div>
+                <div class="theme-opt opt-amethyst" data-theme="theme-amethyst" title="Deep Amethyst"></div>
+                <div class="theme-opt opt-gold" data-theme="theme-gold" title="Champagne Gold"></div>
+                <div class="theme-opt opt-midnight" data-theme="theme-midnight" title="Void Midnight (High Contrast)">
+                </div>
+            </div>
+        </div>
     </aside>
 
     <main id="main-scroll">
@@ -744,7 +919,27 @@
         let currentFilter = 'all';
         let currentView = 'grid';
 
+        const parseRate = (val) => parseInt(val ? val.toString().replace(/[^0-9]/g, '') : '0') || 0;
+
+        // Theme Management
+        function initTheme() {
+            const savedTheme = localStorage.getItem('audit-studio-theme') || 'default';
+            applyTheme(savedTheme);
+        }
+
+        function applyTheme(themeName) {
+            document.body.classList.remove('theme-emerald', 'theme-amethyst', 'theme-gold', 'theme-midnight');
+            if (themeName !== 'default') document.body.classList.add(themeName);
+
+            // Update UI markers
+            document.querySelectorAll('.theme-opt').forEach(opt => {
+                opt.classList.toggle('active', opt.dataset.theme === themeName);
+            });
+            localStorage.setItem('audit-studio-theme', themeName);
+        }
+
         async function init() {
+            initTheme();
             try {
                 const res = await fetch('data.csv');
                 const text = await res.text();
@@ -821,8 +1016,6 @@
             });
 
             // CALCULO DE ESTADÍSTICAS CONTEXTUALES
-            const parseRate = (val) => parseInt(val.toString().replace(/[^0-9]/g, '')) || 0;
-
             const filteredForStats = registry.filter(item => {
                 if (currentFilter === 'all') return item.category !== 'bonus';
                 return item.category === currentFilter;
@@ -933,7 +1126,7 @@
                         <span class="log-name">${l.Course || 'System_Balance_Audit'}</span>
                         <span class="log-meta">${l['Lesson format']} • ${l.Length}m</span>
                     </div>
-                    <div class="log-price">${parseInt(l.rate).toLocaleString()}</div>
+                    <div class="log-price">${parseRate(l.rate).toLocaleString()}</div>
                 `;
                 body.appendChild(entry);
             });
@@ -1010,6 +1203,10 @@
         document.getElementById('drawer-close').onclick = closeDrawer;
         document.getElementById('overlay').onclick = closeDrawer;
         document.getElementById('group-search').oninput = (e) => renderGrid(e.target.value);
+
+        document.querySelectorAll('.theme-opt').forEach(opt => {
+            opt.onclick = () => applyTheme(opt.dataset.theme);
+        });
 
         init();
     </script>
