--- a/index.html
+++ b/index.html
@@ -655,6 +655,25 @@
             background: linear-gradient(90deg, var(--border), transparent);
         }
 
+        /* View Mode Overrides for Day Header */
+        .card-grid.view-compact .day-header {
+            width: 100%;
+            padding: 1.5rem 0 0.5rem;
+            margin-bottom: 0.5rem;
+            font-size: 0.75rem;
+        }
+
+        .card-grid.view-table .day-header {
+            padding: 1.25rem 1.5rem 0.75rem;
+            margin: 0;
+            background: rgba(var(--accent-rgb), 0.03);
+            border-bottom: 1px solid var(--border);
+        }
+
+        .card-grid.view-list .day-header {
+            padding: 2rem 0 0.75rem;
+        }
+
         .card-grid.view-list {
             display: flex;
             flex-direction: column;
@@ -827,6 +846,39 @@
             border: 1px solid #333 !important;
             box-shadow: inset 0 0 5px rgba(0, 242, 255, 0.5);
         }
+
+        /* Upload Section Styles */
+        .upload-section {
+            margin-bottom: 2rem;
+        }
+
+        .upload-btn {
+            width: 100%;
+            padding: 0.85rem;
+            background: var(--accent);
+            color: var(--bg-nav);
+            border: none;
+            border-radius: 12px;
+            font-weight: 700;
+            font-size: 0.8rem;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            transition: var(--transition);
+            box-shadow: 0 4px 15px var(--accent-soft);
+        }
+
+        .upload-btn:hover {
+            transform: translateY(-2px);
+            filter: brightness(1.1);
+            box-shadow: 0 8px 25px var(--accent-soft);
+        }
+
+        #csv-upload {
+            display: none;
+        }
     </style>
 </head>
 
@@ -835,6 +887,13 @@
         <div class="brand-group">
             <div class="brand-icon"></div>
             <span class="brand-name">AuditStudio</span>
+        </div>
+
+        <div class="upload-section">
+            <button class="upload-btn" onclick="document.getElementById('csv-upload').click()">
+                <span>📤</span> Subir Datos
+            </button>
+            <input type="file" id="csv-upload" accept=".csv">
         </div>
 
         <p class="nav-section-label">Categorías</p>
@@ -1203,6 +1262,23 @@
         document.getElementById('drawer-close').onclick = closeDrawer;
         document.getElementById('overlay').onclick = closeDrawer;
         document.getElementById('group-search').oninput = (e) => renderGrid(e.target.value);
+
+        document.getElementById('csv-upload').onchange = (e) => {
+            const file = e.target.files[0];
+            if (!file) return;
+
+            const reader = new FileReader();
+            reader.onload = (event) => {
+                parse(event.target.result);
+                // Reset search and filter to show new data correctly
+                document.getElementById('group-search').value = '';
+                document.querySelectorAll('.nav-link').forEach(l => l.classList.remove('active'));
+                document.querySelector('[data-filter="all"]').classList.add('active');
+                currentFilter = 'all';
+                document.getElementById('current-title').textContent = 'Panel de Control - Datos Subidos';
+            };
+            reader.readAsText(file);
+        };
 
         document.querySelectorAll('.theme-opt').forEach(opt => {
             opt.onclick = () => applyTheme(opt.dataset.theme);
